@@ -220,16 +220,17 @@ function newmail_plugin() {
         // will play the sound as follows:
 
         if ($newmail_changetitle) {
+            global $org_title;
             echo "<script language=\"javascript\" type=\"text/javascript\">\n" .
                 "function ChangeTitleLoad() {\n";
             if( $totalNew > 1 || $totalNew == 0 ) {
-                echo 'window.parent.document.title = "' .
+                echo 'window.parent.document.title = "' . $org_title . ' [' .
                     sprintf(_("%s New Messages"), $totalNew ) . 
-                    "\";\n";
+                    "]\";\n";
             } else {
-                echo 'window.parent.document.title = "' .
+                echo 'window.parent.document.title = "' . $org_title . ' [' .
                     sprintf(_("%s New Message"), $totalNew ) . 
-                    "\";\n";
+                    "]\";\n";
             }
             echo    "if (BeforeChangeTitle != null)\n".
                 "BeforeChangeTitle();\n".
